# LidarProbability

./: CMakeLists.txt  CalculateScores.cpp  ColorMatches.cpp  Confidence.cpp  Confidence.h  ConfidenceProbMatrix.cpp  Consistency.cpp  Consistency.h  ConsistencyProbMatrix.cpp  HeatMap.cpp  TestConfidence.cpp  TestConsistency.cpp  UsedScenePoints.cpp  WindowSlide.cpp
GUI/: CMakeLists.txt  LidarProbability.cpp  LidarProbabilityWidget.cpp  LidarProbabilityWidget.h  LidarProbabilityWidget.ui
LidarScan/: CMakeLists.txt  CMakeLists.txt.bak  ConcentricScan.cpp  Doxyfile  KeepShell.cpp  Legacy.cpp  LidarPoint.cpp  LidarPoint.h  LidarScan.cpp  LidarScan.h  LidarScanner.cpp  LidarScanner.h  LidarStrip.cpp  LidarStrip.h  ScanParamsClass.cpp  ScanParamsClass.h  SingleScan.cpp  TestTransformation.cpp  VisualizeScanFrustrum.cpp  WriteFiles.cpp  WriteFiles.h
LidarScan/Test/: CMakeLists.txt  CMakeLists.txt.bak  Makefile  TestPoint.cpp  TestScan.cpp  TestScanImage.cpp  TestScanner  TestScanner.cpp  TestStrip.cpp
LidarScan/Test/.svn/: entries
LidarScan/Test/.svn/text-base/: CMakeLists.txt.svn-base  TestPoint.cpp.svn-base  TestScan.cpp.svn-base  TestScanner.cpp.svn-base  TestStrip.cpp.svn-base
Tests/: CombineWindows.cpp  Test.cpp  TestLineBetweenPoints.cpp  TestMultipleScanners.cpp  TestSingleVariableMotion.cpp  TestWindows.cpp  WriteMultiplePositions.cpp
